--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@
 /project/project/
 /project/target/
 /target/
+.cache
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
